--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 #root {
-  max-width: 1280px;
+  min-width: 100vw;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -40,3 +41,4 @@
 .read-the-docs {
   color: #888;
 }
+
