--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,13 +6,10 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
   scroll-behavior: smooth;
 }
 
@@ -25,11 +22,15 @@ a:hover {
   color: #747bff;
 }
 
+header{
+  max-width: 100vw;
+}
+
 body {
   margin: 0;
   justify-content: center;
   place-items: top center;
-  min-width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
 }
 
@@ -50,7 +51,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ffffff;
 }
 button:focus,
 button:focus-visible {
@@ -63,7 +64,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #ffffff;
   }
   button {
     background-color: #f9f9f9;
